// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkCollapsible Root renders correctly when closed by default 1`] = `
<DocumentFragment>
  <div
    class="bpk-collapsible bpk-collapsible--default"
    data-backpack-ds-component="Collapsible"
    data-part="root"
    data-scope="collapsible"
    data-state="closed"
    dir="ltr"
    id="collapsible::r0:"
  >
    <button
      aria-controls="collapsible::r0::content"
      aria-expanded="false"
      class="bpk-collapsible__trigger"
      data-part="trigger"
      data-scope="collapsible"
      data-state="closed"
      dir="ltr"
      id="collapsible::r0::trigger"
      type="button"
    >
      Toggle
      <div
        aria-hidden="true"
        class="bpk-collapsible__indicator"
        data-part="indicator"
        data-scope="collapsible"
        data-state="closed"
        dir="ltr"
      >
        v
      </div>
    </button>
    <div
      class="bpk-collapsible__content"
      data-collapsible=""
      data-part="content"
      data-scope="collapsible"
      data-state="closed"
      dir="ltr"
      hidden=""
      id="collapsible::r0::content"
      style="--height: 0px; --width: 0px;"
    >
      <div
        class="bpk-collapsible__content-inner"
      >
        Hidden content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkCollapsible Root renders correctly when open by default 1`] = `
<DocumentFragment>
  <div
    class="bpk-collapsible bpk-collapsible--default"
    data-backpack-ds-component="Collapsible"
    data-part="root"
    data-scope="collapsible"
    data-state="open"
    dir="ltr"
    id="collapsible::r1:"
  >
    <button
      aria-controls="collapsible::r1::content"
      aria-expanded="true"
      class="bpk-collapsible__trigger"
      data-part="trigger"
      data-scope="collapsible"
      data-state="open"
      dir="ltr"
      id="collapsible::r1::trigger"
      type="button"
    >
      Toggle
      <div
        aria-hidden="true"
        class="bpk-collapsible__indicator"
        data-part="indicator"
        data-scope="collapsible"
        data-state="open"
        dir="ltr"
      >
        v
      </div>
    </button>
    <div
      class="bpk-collapsible__content"
      data-collapsible=""
      data-part="content"
      data-scope="collapsible"
      dir="ltr"
      id="collapsible::r1::content"
      style="--height: 0px; --width: 0px;"
    >
      <div
        class="bpk-collapsible__content-inner"
      >
        Hidden content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkCollapsible Root renders the onContrast variant 1`] = `
<DocumentFragment>
  <div
    class="bpk-collapsible bpk-collapsible--on-contrast"
    data-backpack-ds-component="Collapsible"
    data-part="root"
    data-scope="collapsible"
    data-state="closed"
    dir="ltr"
    id="collapsible::r2:"
  >
    <button
      aria-controls="collapsible::r2::content"
      aria-expanded="false"
      class="bpk-collapsible__trigger"
      data-part="trigger"
      data-scope="collapsible"
      data-state="closed"
      dir="ltr"
      id="collapsible::r2::trigger"
      type="button"
    >
      Toggle
      <div
        aria-hidden="true"
        class="bpk-collapsible__indicator"
        data-part="indicator"
        data-scope="collapsible"
        data-state="closed"
        dir="ltr"
      >
        v
      </div>
    </button>
    <div
      class="bpk-collapsible__content"
      data-collapsible=""
      data-part="content"
      data-scope="collapsible"
      data-state="closed"
      dir="ltr"
      hidden=""
      id="collapsible::r2::content"
      style="--height: 0px; --width: 0px;"
    >
      <div
        class="bpk-collapsible__content-inner"
      >
        Hidden content
      </div>
    </div>
  </div>
</DocumentFragment>
`;
